refatoração da autenticação do usuário

--- a/svsa-tp/src/main/webapp/index.xhtml
+++ b/svsa-tp/src/main/webapp/index.xhtml
@@ -12,7 +12,7 @@
 		<p:graphicImage name="imagens/logo_java.jpg"/>
 	
 		<h1>Oi... Bem vindo ao projeto JPA!</h1>
-		<f:event type="preRenderView" listener="#{loginSSOBean.login}" />
+		<f:event type="preRenderView" listener="#{autenticacaoBean.autenticar}" />
 		
 	 </ui:define>
 
