--- a/svsa-tp/src/main/webapp/index.xhtml
+++ b/svsa-tp/src/main/webapp/index.xhtml
@@ -14,6 +14,9 @@
 		<h1>Oi... Bem vindo ao projeto JPA!</h1>
 		<f:event type="preRenderView" listener="#{autenticacaoBean.autenticar}" />
 		
+		<p:commandLink value="Ocorrencias" action="#{manterOcorrenciaBean.navegarParaOcorrencias}" />
+
+		
 	 </ui:define>
 
 </ui:composition>
