--- a/src/main/webapp/restrito/ocorrencia/GerirOcorrencia.xhtml
+++ b/src/main/webapp/restrito/ocorrencia/GerirOcorrencia.xhtml
@@ -7,7 +7,7 @@
 
 	<ui:define name="corpo">
 
-		
+
 		<!-- COMEÇA AQUUIIIIIIIIIIIIIIIIIIII -->
 		<h:form id="frmPesquisa">
 
@@ -25,7 +25,7 @@
 
 
 				<p:column headerText="Descrição"
-					style="width: 200px; text-align: center">
+					style="width: 200px; text-align: center;">
 					<h:outputText value="#{ocorrencia.descricao}" />
 				</p:column>
 				<p:column headerText="Criado por"
@@ -64,77 +64,79 @@
 
 
 
-		<p:dialog header="Detalhes da Ocorrência" widgetVar="ocorrenciaDialog"
-			modal="true" resizable="false" draggable="false"
-			id="ocorrenciaDialog" width="600" showEffect="fade" hideEffect="fade"
-			closable="true">
+		<p:dialog header="Detalhes da Ocorrência" id="ocorrenciaDialog"
+			widgetVar="ocorrenciaDialog" modal="true" resizable="true"
+			closeOnEscape="true" showEffect="explode" hideEffect="explode"
+			width="100%" position="center" maximizable="true" height="100vh"
+			fitViewport="true" responsive="true" color="#ff4c4c">
 			<h:form>
 				<h:panelGroup id="ocorrenciaDetalhes" styleClass="p-3">
 
 
-					<p:panelGrid columns="2" styleClass="p-grid">
-						<h:outputText value="Tipo: " styleClass="ui-font-bold" />
+					<p:panelGrid columns="6"  style="width: 100%;">
+						<h:outputText value="Tipo: " style="font-weight: bold;" />
 						<h:outputText value="#{respostaOcorrenciaBean.ocorrencia.tipo}" />
-						<h:outputText value="Status: " styleClass="ui-font-bold" />
+						<h:outputText value="Status: " style="font-weight: bold;" />
 						<h:outputText value="#{respostaOcorrenciaBean.ocorrencia.status}" />
-						<h:outputText value="Descrição: " styleClass="ui-font-bold" />
+						<h:outputText value="Data: " style="font-weight: bold;" />
+						<h:outputText value="#{respostaOcorrenciaBean.ocorrencia.dataCriacao}">
+	    				<f:convertDateTime pattern="dd/MM/yyyy" />
+	    			</h:outputText>
+					</p:panelGrid>
+					<p:panelGrid columns="2"  style="width: 100%; margin-top: 5px">
+						<h:outputText value="Descrição: " style="font-weight: bold;" />
 						<h:outputText
 							value="#{respostaOcorrenciaBean.ocorrencia.descricao}"
 							styleClass="ui-font-italic ui-text-primary" />
 					</p:panelGrid>
+					
 				</h:panelGroup>
+				<br></br>
+
+				<p:panel styleClass="p-mb-3" header="Responder" toggleable="true">
+
+					<h:outputText value="Não há respostas para esta ocorrência."
+						rendered="#{empty respostaOcorrenciaBean.respostas}"
+						style="font-weight: bold; color: #ff4c4c; padding: 10px;" />
 
 
-				<h:panelGroup id="respostasPanel" styleClass="p-3">
-					<p:panel styleClass="p-mb-3" header="Respostas" toggleable="true">
 
-						<h:outputText value="Não há respostas para esta ocorrência."
-							rendered="#{empty respostaOcorrenciaBean.respostas}"
-							style="font-weight: bold; color: #ff4c4c; padding: 10px;" />
+					<p:panel rendered="#{not empty respostaOcorrenciaBean.respostas}"
+						style="max-height: 350px; overflow-y: auto; display: flex; flex-direction: column-reverse;">
+						<ui:repeat value="#{respostaOcorrenciaBean.respostas}"
+							var="resposta">
+							<h:outputText
+								value="#{resposta.usuario.nome} (#{resposta.usuario.grupo}): " style="font-weight: bold;"/>
+							<p:card styleClass="p-shadow-2 p-mb-2"
+								style="border: 1px solid #c1c1c1; border-radius: 8px; min-height: 20px; max-height: 200px; overflow-y: auto; word-wrap: break-word;">
+								<h:outputText value="#{resposta.resposta}"
+									styleClass="ui-text-muted " />
 
-
-						<h:panelGroup
-							rendered="#{not empty respostaOcorrenciaBean.respostas}">
-							<p:panel style="max-height: 300px; overflow-y: auto;">
-								<ui:repeat value="#{respostaOcorrenciaBean.respostas}"
-									var="resposta">
-									<h:outputText
-										value="#{resposta.usuario.nome} (#{resposta.usuario.grupo}): " />
-									<p:card styleClass="p-shadow-2 p-mb-2"
-										style="border: 1px solid #c1c1c1; border-radius: 8px; min-height: 20px; max-height: 200px; overflow-y: auto; word-wrap: break-word;">
-										<h:outputText value="#{resposta.resposta}"
-											styleClass="ui-text-muted " />
-
-									</p:card>
-									<br />
-								</ui:repeat>
-							</p:panel>
-						</h:panelGroup>
+							</p:card>
+							<br />
+						</ui:repeat>
 					</p:panel>
-				</h:panelGroup>
+					<br></br>
+					<p:inputTextarea id="descricaoResposta"
+						value="#{respostaOcorrenciaBean.novaResposta.resposta}" rows="5"
+						required="true" 
+						style="width:97%; max-height: 100px;  overflow-y: auto;" height="100vh"/>
+					<br />
+					<h:panelGroup
+						style="display: flex; justify-content: flex-end; margin-top: 10px;">
+						<p:commandButton value="Enviar"
+							action="#{respostaOcorrenciaBean.salvarResposta}"
+							update="ocorrenciaDialog"
+							oncomplete="PF('ocorrenciaDialog').show();" />
+					</h:panelGroup>
+				</p:panel>
+					
+	
 
-				<p:commandButton value="Responder"
-					oncomplete="PF('respostaDialog').show()" />
+
 			</h:form>
 		</p:dialog>
 
-		<p:dialog header="Responder" widgetVar="respostaDialog" modal="true"
-			resizable="false" draggable="false" id="respostaDialog" width="400">
-			<h:form id="formResposta">
-
-				<p:messages id="messages" showDetail="false" closable="true">
-					<p:autoUpdate />
-				</p:messages>
-				<br />
-				<p:inputTextarea id="descricaoResposta"
-					value="#{respostaOcorrenciaBean.novaResposta.resposta}" rows="5"
-					cols="30" required="true" />
-				<br />
-				<p:commandButton value="Enviar Resposta"
-					action="#{respostaOcorrenciaBean.salvarResposta}"
-					update="ocorrenciaDialog" oncomplete="PF('respostaDialog').hide()" />
-			</h:form>
-		</p:dialog>
 	</ui:define>
 
 </ui:composition>
